--- a/tests/zero-suppression/README
+++ b/tests/zero-suppression/README
@@ -1,4 +1,3 @@
-- To build:
-  - mkdir build
-  - cd build && cmake .. && make
-  - ./zero_suppression
+* To build:
+  * `mkdir build && cd build && cmake .. && make`
+  * `./zero_suppression`
